--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
   "author": "Shawky faried",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
-    "slugify": "^1.6.5"
+    "nodemailer": "^6.8.0",
+    "slugify": "^1.6.5",
+    "xss": "^1.0.14",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
